# VisionBox

./: .gitignore  README.md  VisionBox.pptx  app.py  main.py  pyproject.toml  requirements.txt
utils/: detector.py  helpers.py
workshop-starter/: README.md  app.py  detector.py  plan.md
